@@ -5,12 +5,13 @@ AC_DEFUN(CME_FIND_SOCKETPAIR,
 dnl Find the library which provides socketpair()
 dnl
 
+AC_MSG_CHECKING(for libraries needed for socketpair)
 AC_TRY_LINK(,[socketpair()],
-	    [],
+	    AC_MSG_RESULT(none),
 	    AC_CHECK_LIB(socket, socketpair,
+			 AC_MSG_RESULT(-lsocket)
 			 [LDFLAGS="$LDFLAGS -lsocket "],
 			 AC_MSG_ERROR(Library containing socketpair() not found)
 			)
 	   )
 ])
-
